--- a/charts/minio/values.yaml
+++ b/charts/minio/values.yaml
@@ -6,7 +6,7 @@ clusterDomain: cluster.local
 ##
 image:
   repository: registry.cn-hangzhou.aliyuncs.com/link-cloud/minio
-  tag: v20200207
+  tag: cm
   pullPolicy: IfNotPresent
 
 ## Set default image, imageTag, and imagePullPolicy for the `mc` (the minio
